--- a/location.html
+++ b/location.html
@@ -22,7 +22,7 @@
                </div>
                <div class="flex flex-col">
                  <span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span>
-                 <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPRAY & NEUTER CLINIC</span>
+                 <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY AND NEUTER CLINIC</span>
                </div>
             </a>
           </div>
@@ -46,8 +46,7 @@
                         <a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">초미세 절개</a>
                         <a href="neutering-cost.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">합리적인 비용</a>
                         <a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 회복 관리</a>
-                        <a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 사진</a>
-                        <a href="neutering-reviews.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">수술 후기</a>
+                        <a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">수술 후 사진</a>
                     </div>
                 </div>
             </div>
@@ -65,16 +64,164 @@
           <button id="mobile-menu-btn" class="md:hidden p-2 text-white"><i data-lucide="menu" class="w-6 h-6"></i></button>
         </div>
       </div>
-      <!-- Mobile Menu Omitted -->
-      <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto"><div class="flex flex-col py-4"><a href="index.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">홈으로</a><a href="location.html" class="mobile-link px-6 py-3 text-amber-600 font-bold bg-amber-50">찾아오시는길</a></div></div>
+      <!-- Mobile Menu -->
+      <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto">
+          <div class="flex flex-col py-4">
+             <a href="index.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">홈으로</a>
+             <a href="location.html" class="mobile-link px-6 py-3 text-amber-600 font-bold bg-amber-50">찾아오시는길</a>
+             <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
+             <a href="neutering-process.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술</a>
+          </div>
+      </div>
     </header>
 
     <main class="pt-0 min-h-screen">
-        <section class="relative h-72 md:h-80 flex items-center justify-center overflow-hidden"><div class="absolute inset-0 z-0"><video autoplay loop muted playsinline class="w-full h-full object-cover"><source src="bground3.mp4" type="video/mp4"></video><div class="absolute inset-0 bg-slate-900/60"></div></div><div class="relative z-10 text-center px-4 pt-20"><h1 class="text-3xl md:text-5xl font-serif font-bold text-white mb-6">찾아오시는 길</h1><nav class="flex justify-center items-center gap-2 text-sm text-slate-300"><a href="index.html" class="hover:text-white transition-colors"><i data-lucide="home" class="w-4 h-4"></i></a><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span>병원소개</span><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span class="text-amber-400 font-bold">찾아오시는길</span></nav></div></section>
-        <section class="py-24 bg-white"><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"><div class="text-center mb-16"><span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Location & Parking</span><h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">찾아오시는 길</h2><p class="text-slate-600">참좋은동물병원으로 오시는 길을 안내해 드립니다.</p></div><div class="grid lg:grid-cols-3 gap-8 mb-16"><div class="lg:col-span-2 h-[400px] lg:h-[500px] rounded-2xl overflow-hidden shadow-lg border border-slate-200 bg-slate-100 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=17&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div><div class="bg-white p-8 rounded-2xl shadow-lg border border-slate-100 flex flex-col justify-center gap-8"><div><div class="flex items-center gap-3 mb-2"><div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="map-pin" class="w-5 h-5"></i></div><h3 class="text-xl font-bold text-slate-900">주소</h3></div><p class="text-slate-600 pl-13 text-lg">경남 밀양시 밀양대로 1896 1층<br/>(내이동 1187-1)</p></div><div><div class="flex items-center gap-3 mb-2"><div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="phone" class="w-5 h-5"></i></div><h3 class="text-xl font-bold text-slate-900">대표전화</h3></div><p class="text-slate-900 pl-13 text-2xl font-bold">055-351-3581</p></div><div><div class="flex items-center gap-3 mb-2"><div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="bus" class="w-5 h-5"></i></div><h3 class="text-xl font-bold text-slate-900">대중교통</h3></div><p class="text-slate-600 pl-13">밀양 시외버스터미널 도보 10분</p></div></div></div><div class="bg-slate-50 rounded-3xl p-8 md:p-12 border border-slate-200"><div class="grid md:grid-cols-2 gap-12 items-center"><div><span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Parking Guide</span><h3 class="text-2xl md:text-3xl font-bold text-slate-900 mb-6">주차 안내</h3><div class="space-y-6"><div class="flex gap-4"><div class="flex-shrink-0 mt-1"><i data-lucide="parking-circle" class="w-8 h-8 text-slate-400"></i></div><div><h4 class="text-lg font-bold text-slate-900 mb-2">전용 주차장 이용</h4><p class="text-slate-600 leading-relaxed">병원 바로 옆 <strong class="text-slate-900 bg-amber-100 px-1">KT전화국 주차장</strong>을 이용하시면 됩니다.<br/>넓고 쾌적한 주차 공간이 마련되어 있어 진료 시간 동안 편리하게 이용하실 수 있습니다.</p></div></div></div></div><div class="relative rounded-2xl overflow-hidden shadow-xl group"><img src="parking.jpg" alt="KT전화국 주차장" class="w-full h-64 md:h-80 object-cover transition-transform duration-500 group-hover:scale-105"><div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6"><p class="text-white font-medium flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-amber-400"></i>병원 옆 KT전화국 주차장</p></div></div></div></div></div></section>
+        <section class="relative h-72 md:h-80 flex items-center justify-center overflow-hidden">
+            <div class="absolute inset-0 z-0">
+                <video autoplay loop muted playsinline class="w-full h-full object-cover">
+                    <source src="bground3.mp4" type="video/mp4">
+                </video>
+                <div class="absolute inset-0 bg-slate-900/60"></div>
+            </div>
+            <div class="relative z-10 text-center px-4 pt-20">
+                <h1 class="text-3xl md:text-5xl font-serif font-bold text-white mb-6">찾아오시는 길</h1>
+                <nav class="flex justify-center items-center gap-2 text-sm text-slate-300">
+                    <a href="index.html" class="hover:text-white transition-colors"><i data-lucide="home" class="w-4 h-4"></i></a>
+                    <i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i>
+                    <span>병원소개</span>
+                    <i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i>
+                    <span class="text-amber-400 font-bold">찾아오시는길</span>
+                </nav>
+            </div>
+        </section>
+
+        <section class="py-24 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center mb-16">
+                    <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Location & Parking</span>
+                    <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">찾아오시는 길</h2>
+                    <p class="text-slate-600">참좋은동물병원으로 오시는 길을 안내해 드립니다.</p>
+                </div>
+                <div class="grid lg:grid-cols-3 gap-8 mb-16">
+                    <div class="lg:col-span-2 h-[400px] lg:h-[500px] rounded-2xl overflow-hidden shadow-lg border border-slate-200 bg-slate-100 relative">
+                        <iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=17&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="bg-white p-8 rounded-2xl shadow-lg border border-slate-100 flex flex-col justify-center gap-8">
+                        <div>
+                            <div class="flex items-center gap-3 mb-2">
+                                <div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="map-pin" class="w-5 h-5"></i></div>
+                                <h3 class="text-xl font-bold text-slate-900">주소</h3>
+                            </div>
+                            <p class="text-slate-600 pl-13 text-lg">경남 밀양시 밀양대로 1896 1층<br/>(내이동 1187-1)</p>
+                        </div>
+                        <div>
+                            <div class="flex items-center gap-3 mb-2">
+                                <div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="phone" class="w-5 h-5"></i></div>
+                                <h3 class="text-xl font-bold text-slate-900">대표전화</h3>
+                            </div>
+                            <p class="text-slate-900 pl-13 text-2xl font-bold">055-351-3581</p>
+                        </div>
+                        <div>
+                            <div class="flex items-center gap-3 mb-2">
+                                <div class="w-10 h-10 rounded-full bg-amber-50 flex items-center justify-center text-amber-600"><i data-lucide="bus" class="w-5 h-5"></i></div>
+                                <h3 class="text-xl font-bold text-slate-900">대중교통</h3>
+                            </div>
+                            <p class="text-slate-600 pl-13">밀양 시외버스터미널 도보 10분</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-slate-50 rounded-3xl p-8 md:p-12 border border-slate-200">
+                    <div class="grid md:grid-cols-2 gap-12 items-center">
+                        <div>
+                            <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Parking Guide</span>
+                            <h3 class="text-2xl md:text-3xl font-bold text-slate-900 mb-6">주차 안내</h3>
+                            <div class="space-y-6">
+                                <div class="flex gap-4">
+                                    <div class="flex-shrink-0 mt-1"><i data-lucide="parking-circle" class="w-8 h-8 text-slate-400"></i></div>
+                                    <div>
+                                        <h4 class="text-lg font-bold text-slate-900 mb-2">전용 주차장 이용</h4>
+                                        <p class="text-slate-600 leading-relaxed">병원 바로 옆 <strong class="text-slate-900 bg-amber-100 px-1">KT전화국 주차장</strong>을 이용하시면 됩니다.<br/>넓고 쾌적한 주차 공간이 마련되어 있어 진료 시간 동안 편리하게 이용하실 수 있습니다.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="relative rounded-2xl overflow-hidden shadow-xl group">
+                            <img src="parking.jpg" alt="KT전화국 주차장" class="w-full h-64 md:h-80 object-cover transition-transform duration-500 group-hover:scale-105">
+                            <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6">
+                                <p class="text-white font-medium flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-amber-400"></i>병원 옆 KT전화국 주차장</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    
-    <footer id="contact" class="bg-slate-900 text-slate-300"><div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full" referrerpolicy="no-referrer-when-downgrade"></iframe></div><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16"><div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12"><div><h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3><p class="text-slate-400 text-sm">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p></div></div><div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500"><p>© 2026 Chamzeon Spray & Neuter Clinic. All rights reserved.</p></div></div></footer>
+
+    <footer id="contact" class="bg-slate-900 text-slate-300">
+        <div class="w-full h-96 bg-slate-200 relative">
+            <iframe 
+                title="참좋은동물병원 위치"
+                src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed"
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                class="w-full h-full transition-all duration-700"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
+                <div>
+                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p>
+                </div>
+                <div>
+                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4>
+                    <ul class="space-y-4">
+                        <li class="flex items-start gap-3">
+                            <i data-lucide="map-pin" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i>
+                            <span class="text-sm">경남 밀양시 밀양대로 1896 1층<br/>참좋은동물병원</span>
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <i data-lucide="phone" class="text-amber-500 flex-shrink-0 w-4 h-4"></i>
+                            <span class="text-sm">055-351-3581</span>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Hours</h4>
+                    <ul class="space-y-4">
+                        <li class="flex items-start gap-3">
+                            <i data-lucide="clock" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i>
+                            <div class="text-sm">
+                                <strong class="text-amber-500 block mb-1">일요일, 공휴일 휴무</strong>
+                                <span class="block mb-2"></span>
+                                <strong class="text-white block mb-1">진료시간</strong>
+                                <span class="block">월 ~ 금 : 오전 10:00 - 오후 06:00</span>
+                                <span class="block">토요일 : 오전 10:00 - 오후 03:00</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Quick Menu</h4>
+                    <ul class="space-y-2 text-sm">
+                        <li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li>
+                        <li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li>
+                        <li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li>
+                        <li><a href="notice.html" class="hover:text-amber-400 transition-colors">커뮤니티</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500">
+                <p>© 2026 Chamzeon Spay & Neuter Clinic. All rights reserved.</p>
+                <p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p>
+            </div>
+        </div>
+    </footer>
+
     <script>
       lucide.createIcons();
       const header = document.getElementById('main-header');
@@ -109,6 +256,7 @@
             mobileMenuBtn.classList.add('text-white'); mobileMenuBtn.classList.remove('text-slate-900');
         }
       });
+
       const mobileMenu = document.getElementById('mobile-menu');
       let isMobileMenuOpen = false;
       mobileMenuBtn.addEventListener('click', () => { isMobileMenuOpen = !isMobileMenuOpen; mobileMenu.classList.toggle('hidden', !isMobileMenuOpen); });
