--- a/notice.html
+++ b/notice.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="flex flex-col">
                             <span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span>
-                            <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPRAY & NEUTER CLINIC</span>
+                            <span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY AND NEUTER CLINIC</span>
                         </div>
                     </a>
                 </div>
@@ -32,7 +32,7 @@
                     </div>
                     <a href="pricing.html" class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors">진료비안내</a>
                     <div class="relative group"><button class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors flex items-center gap-1 py-4">중성화수술<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
-                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="neutering-process.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">초미세 절개</a><a href="neutering-cost.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">합리적인 비용</a><a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 사진</a><a href="neutering-reviews.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">수술 후기</a></div></div>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="neutering-process.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">초미세 절개</a><a href="neutering-cost.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">합리적인 비용</a><a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">수술 후 사진</a></div></div>
                     </div>
                     <a href="stemcell.html" class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
                     <div class="relative group"><button class="nav-item text-sm font-bold text-amber-500 transition-colors flex items-center gap-1 py-4">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
@@ -48,7 +48,51 @@
 
     <main class="pt-0 min-h-screen">
         <section class="relative h-72 md:h-80 flex items-center justify-center overflow-hidden"><div class="absolute inset-0 z-0"><video autoplay loop muted playsinline class="w-full h-full object-cover"><source src="bground3.mp4" type="video/mp4"></video><div class="absolute inset-0 bg-slate-900/60"></div></div><div class="relative z-10 text-center px-4 pt-20"><h1 class="text-3xl md:text-5xl font-serif font-bold text-white mb-6">공지사항</h1><nav class="flex justify-center items-center gap-2 text-sm text-slate-300"><a href="index.html" class="hover:text-white transition-colors"><i data-lucide="home" class="w-4 h-4"></i></a><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span>커뮤니티</span><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span class="text-amber-400 font-bold">공지사항</span></nav></div></section>
-        <section class="py-24 bg-white"><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"><div class="text-center mb-16"><p class="text-slate-600 max-w-2xl mx-auto">참좋은동물병원의 새로운 소식을 알려드립니다.</p></div><div class="bg-white rounded-lg shadow-sm border border-slate-200 overflow-hidden"><div class="overflow-x-auto"><table class="w-full text-left"><thead class="bg-slate-50 border-b border-slate-200"><tr><th class="hidden md:table-cell px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-20 text-center">No</th><th class="px-4 md:px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider">제목</th><th class="hidden md:table-cell px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-32 text-center">작성자</th><th class="px-4 md:px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-24 md:w-32 text-center">날짜</th></tr></thead><tbody id="notice-list" class="divide-y divide-slate-100"></tbody></table></div></div><div id="view-modal" class="fixed inset-0 bg-black/50 z-[60] hidden flex items-center justify-center p-4 backdrop-blur-sm"><div class="bg-white rounded-2xl w-full max-w-2xl shadow-2xl overflow-hidden animate-fade-in-up max-h-[90vh] flex flex-col"><div class="px-8 py-6 border-b border-slate-100 flex justify-between items-start bg-slate-50"><div class="pr-8"><h3 id="view-title" class="text-xl font-bold text-slate-900 mb-2"></h3><div class="flex items-center gap-4 text-xs text-slate-500"><span id="view-author" class="font-medium bg-white border px-2 py-0.5 rounded"></span><span id="view-date"></span></div></div><button onclick="closeViewModal()" class="text-slate-400 hover:text-slate-600 flex-shrink-0 mt-1"><i data-lucide="x" class="w-6 h-6"></i></button></div><div class="p-8 overflow-y-auto"><div id="view-content" class="prose prose-slate max-w-none text-slate-700 leading-relaxed whitespace-pre-wrap"></div></div><div class="px-8 py-4 bg-slate-50 border-t border-slate-100 flex justify-center"><button onclick="closeViewModal()" class="px-8 py-2.5 rounded-lg bg-slate-900 text-white hover:bg-slate-800 text-sm font-medium transition-colors">닫기</button></div></div></div></div></section>
+        <section class="py-24 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="text-center mb-16">
+                    <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Notice</span>
+                    <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">공지사항</h2>
+                    <p class="text-slate-600 max-w-2xl mx-auto">참좋은동물병원의 새로운 소식을 알려드립니다.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-sm border border-slate-200 overflow-hidden">
+                    <div class="overflow-x-auto">
+                        <table class="w-full text-left">
+                            <thead class="bg-slate-50 border-b border-slate-200">
+                                <tr>
+                                    <th class="hidden md:table-cell px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-20 text-center">No</th>
+                                    <th class="px-4 md:px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider">제목</th>
+                                    <th class="hidden md:table-cell px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-32 text-center">작성자</th>
+                                    <th class="px-4 md:px-6 py-4 text-xs font-bold text-slate-500 uppercase tracking-wider w-24 md:w-32 text-center">날짜</th>
+                                </tr>
+                            </thead>
+                            <tbody id="notice-list" class="divide-y divide-slate-100"></tbody>
+                        </table>
+                    </div>
+                </div>
+                
+                <div id="view-modal" class="fixed inset-0 bg-black/50 z-[60] hidden flex items-center justify-center p-4 backdrop-blur-sm">
+                    <div class="bg-white rounded-2xl w-full max-w-2xl shadow-2xl overflow-hidden animate-fade-in-up max-h-[90vh] flex flex-col">
+                        <div class="px-8 py-6 border-b border-slate-100 flex justify-between items-start bg-slate-50">
+                            <div class="pr-8">
+                                <h3 id="view-title" class="text-xl font-bold text-slate-900 mb-2"></h3>
+                                <div class="flex items-center gap-4 text-xs text-slate-500">
+                                    <span id="view-author" class="font-medium bg-white border px-2 py-0.5 rounded"></span>
+                                    <span id="view-date"></span>
+                                </div>
+                            </div>
+                            <button onclick="closeViewModal()" class="text-slate-400 hover:text-slate-600 flex-shrink-0 mt-1"><i data-lucide="x" class="w-6 h-6"></i></button>
+                        </div>
+                        <div class="p-8 overflow-y-auto">
+                            <div id="view-content" class="prose prose-slate max-w-none text-slate-700 leading-relaxed whitespace-pre-wrap"></div>
+                        </div>
+                        <div class="px-8 py-4 bg-slate-50 border-t border-slate-100 flex justify-center">
+                            <button onclick="closeViewModal()" class="px-8 py-2.5 rounded-lg bg-slate-900 text-white hover:bg-slate-800 text-sm font-medium transition-colors">닫기</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer id="contact" class="bg-slate-900 text-slate-300"><div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full" referrerpolicy="no-referrer-when-downgrade"></iframe></div><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16"><div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12"><div><h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3><p class="text-slate-400 text-sm">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p></div></div><div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500"><p>© 2026 Chamzeon Spray & Neuter Clinic. All rights reserved.</p></div></div></footer>
